@@ -8,10 +8,12 @@ version 3.0.0 (??/??/????):
 	  support.  The default is 'auto', which will first look for 3.x
 	  development headers and then 2.x development headers.
 	* Add email notification in the docklet area. (Alexei) (#3571)
-	* Add a pref to select the type messages in conversation that triggers 
+	* Add a pref to select the type messages in conversation that triggers
 	  the docklet notification. (Momchil) (#12598)
 	* Complete support for receiving a limited amount of history when
 	  joining a room. (Kha) (#15458)
+	* Fix gevolution plugin to compile with e-d-s >= 3.6, older versions are
+	  not supported anymore. (#15353)
 
 	Finch:
 	* Support the conversation-extended signal for extending the
